명령어 추가 및 GUI 요청사항 수정